* header file cleanup.
* [Bug 1037] buffer in subroutine was 1 byte short.
* configure.ac: cleanup, add option for wintime, and lay the groundwork
  for the changes needed for bug 1028.
* Fixes from Dave Mills: 'bias' and 'interleave' work.  Separate
  phase and frequency discipline (for long poll intervals).  Update
  TAI function to match current leapsecond processing.
* Documentation updates from Dave Mills.
* [Bug 1037] Use all 16 of the MD5 passwords generated by ntp-keygen.
* Fixed the incorrect edge parameter being passed to time_pps_kcbind in
  NMEA refclock driver.
* [Bug 399] NMEA refclock driver does not honor time1 offset if flag3 set.
* [Bug 985] Modifications to NMEA reference clock driver to support Accord
  GPS Clock.
* poll time updates from Dave Mills.
* local refclock documentation updates from Dave Mills.
* [Bug 1022] Fix compilation problems with yesterday's commit.
* Updates and cleanup from Dave Mills:
  I've now spent eleven months of a sabbatical year - 7 days a week, 6-10
  hours most days - working on NTP. I have carefully reviewed every major
  algorithm, examined its original design and evolution from that design.
  I've trimmed off dead code and briar patches and did zillions of tests
  contrived to expose evil vulnerabilities. The development article is in
  rather good shape and should be ready for prime time.

  1. The protostats statistics files have been very useful in exposing
  little twitches and turns when something hiccups, like a broken PPS
  signal. Most of what used to be syslog messages are now repackaged as
  protostats messages with optional syslog as well. These can also be sent
  as traps which might be handy to tiggle a beeper or celltext. These, the
  sysstats files and cryptostats files reveal the ambient health of a busy
  server, monitor traffic and error counts and spot crypto attacks.

  2. Close inspection of the clock discipline behavior at long poll